загружаем файл с измененным текстом

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container">
       <h2 class="subheading" >Давайте познакомимся</h2>.
       <h3>Пара слов о себе</h3>
-      <p>Изучаю язык программирования html.</p>
+      <p>Изучаю язык программирования html и css.</p>
       <h3>Могу задавать вопросы по программированию, возможно порой нелепые.</h3>
       <p>Возможно совместное изучение языка, что ускорит запоминание и усваивание
         новых тем и навыков.</p>
